--- a/src/public/styles/user/register.css
+++ b/src/public/styles/user/register.css
@@ -7,22 +7,27 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    /* align-items: flex-start; */
 }
 
 .form-group {
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
-    /* align-items: flex-start; */
 }
 
 .form-group input {
     padding: 0.5rem 1rem;
+    border-radius: 10px;
+    border: 1px solid;
 }
 
 .form-button {
     margin-top: 3rem;
+}
+
+.form-button button{
+    margin-top: 1rem;
+    border-radius: 10px; /* Anda dapat menyesuaikan nilai ini sesuai dengan keinginan desain Anda */
 }
 
 .form-hyperlink {
@@ -30,7 +35,7 @@
 }
 
 .form-hyperlink a {
-    color: var(--darkgreen);
+    color: var(--white);
 }
 
 .alert-show {
